# validra-ai-core

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ollama  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
app/: cli.py  main.py
app/api/routes/: cancel.py  generation.py  validation.py
app/api/schemas/: requests.py  responses.py
app/config/: settings.py
app/engine/: executor.py  orchestrator.py
app/plugins/: base.py  llm_plugin.py  registry.py
app/plugins/fuzz/: plugin.py
app/plugins/pen/: plugin.py
app/plugins/security/: plugin.py
app/providers/: base.py  registry.py
app/providers/anthropic/: config.py  provider.py
app/providers/ollama/: config.py  provider.py
app/providers/openai/: config.py  provider.py
app/validator/: base.py  llm_validator.py
tests/: conftest.py  test_api.py  test_executor.py  test_llm_plugin.py  test_orchestrator.py  test_registries.py  test_validator.py
